# docs/swagger.yaml
@@ -81,27 +81,6 @@ definitions:
       user_id:
         type: integer
     type: object
-  models.TerminalCreateRequest:
-    properties:
-      address:
-        type: string
-      assembly_number:
-        type: string
-      cash_register_number:
-        type: string
-      company_name:
-        type: string
-      database_update_date:
-        type: string
-      free_record_balance:
-        type: integer
-      inn:
-        type: string
-      last_request_date:
-        type: string
-      module_number:
-        type: string
-    type: object
   models.TerminalExistsRequest:
     properties:
       cash_register_number:
@@ -497,13 +476,6 @@ paths:
       consumes:
       - application/json
       description: Create a new terminal with the given input
-      parameters:
-      - description: Create terminal request
-        in: body
-        name: terminal
-        required: true
-        schema:
-          $ref: '#/definitions/models.TerminalCreateRequest'
       produces:
       - application/json
       responses:
